# Parfum

./: .coverage  README.md  app.py  pyproject.toml  requirements.txt
data/: parfums_data_base.json  parfums_data_base_machineLearning.csv  parfums_liste_url.json
scr/Machine_learning/: Liste_Models.ipynb  Model_GB.py  Nettoyage_base_ML.py
scr/Machine_learning/module/: nettoyage.py
scr/Scrapping/: Scrapping_Data.py  Scrapping_URL.py
scr/Scrapping/module/: fonction_scrap_data.py  fusion_scrap.py  telechargment_fragrance.py
scr/app/module/: fonction_cache.py  fonction_css.py  fonction_filtre_2.py  fonction_stats.py
scr/app/style/: style.css
src/Machine_learning/: Liste_Models.ipynb  Model_GB.py  Nettoyage_base_ML.py
src/Machine_learning/module/: load_data.py
src/Scraping/: Scraping_Data.py  Scraping_URL.py
src/Scraping/module/: classe.py  fonction_scrap_data.py  fonction_scrap_url.py  fusion_scrap.py  telechargement_catalogue.py
src/app/module/: fonction_cache.py  fonction_filtre.py  fonction_prettycard.py  fonction_stats.py  fonction_tableau.py
tests/: test_scraping_data.py  test_scrapping_data.py
